--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,8 @@
             <div id="create-article-form">
                 <!-- form -->
             </div>
-            <div id="todo">
-                <!-- form -->
-            </div>
+            <div id="todo"></div>
+            <div id="new"></div>
         </div>
     </div>
 </div>
